# webdevelopertestwork

./: .gitignore  README.md
client/: package-lock.json
client/src/: Enums.ts  WSClient.ts
client/src/Models/: Base.ts  (+1 more)
server/: Dockerfile  alembic.ini  app.py  db_commands.txt  docker-compose.yaml  docker_env.txt  entrypoint.sh  enums.py  example.txt  exchange_dump  filldb.py  killthemall.bat  local_env.txt  message_processors.py  ntpro_server.py  pyproject.toml  requirements.txt  sql.db  starttests.bat  test_new.bat  tests.py  utils.py
server/data/: quotes.csv
server/migrations/: env.py
server/migrations/versions/: 027238d703bf_subscribes.py  2cd23f85c034_instrument.py  39fdd8c9d5b6_instrument.py  5432f83e2b9c_added_required_tables.py  7e8364c20c54_orders.py  80d7c818c8d4_index.py  96988896b6c3_enums.py  afec666ceeef_uuid.py  bd4e8d59bad3_instrument.py  bdc44dca98bd_subscribes.py  cb24abc10f2d_orders.py  d301637bb6b1_models.py  db31653e4bcd_added_required_tables.py  ef7e23e6a9aa_models.py
server/models/: base.py  client_messages.py  dbase.py  server_messages.py
server/server/: app.py  enums.py  example.txt  examples.txt  index.html  message_processors.py  ntpro_server.py  pytest_conditions.py  utils.py
server/server/data/: instruments.csv
server/server/models/: base.py  client_messages.py  dbase.py  server_messages.py
server/tests/: conftest.py  test_initial.py  test_nonjson_subscriptions.py  test_orders.py  test_subscriptions.py  utils_for_tests.py
webdevelopertestwork/: .gitignore  README.md
webdevelopertestwork/client/: package.json
(+5 files in other folders)
