[project]
name='test-ntpro-server'
authors=[{name='NTPro', email='info@ntprog.com' }]
requires-python=">=3.10"
version="0.0.1"
dependencies = [
    'fastapi==0.61.2',
    'uvicorn[standard]==0.14.0',
    'bidict==0.22.0',
]

[tool.isort]
profile="hug"
verbose=true
no_lines_before=["LOCALFOLDER"]
multi_line_output=2
include_trailing_comma=false
line_length=120
